--- a/email-webpack/package.json
+++ b/email-webpack/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "caesiumy",
@@ -22,5 +24,10 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "babel": {
+    "presets": [
+      "react"
+    ]
   }
 }
