--- a/email-webpack/package.json
+++ b/email-webpack/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack serve --open --config webpack.dev.js",
+    "start": "webpack serve --open --config webpack.config.js --mode=development",
     "build": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,9 +13,10 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.4.0",
-    "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.10.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.59.0",
     "webpack-cli": "^4.9.1",
