project: Reset project structure

--- a/email-webpack/package.json
+++ b/email-webpack/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack serve --open --config webpack.config.js --mode=development",
+    "start": "webpack serve --open --hot --config webpack.config.js --mode=development",
     "build": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.4.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.4.0",
     "react-refresh": "^0.10.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.59.0",
@@ -28,6 +30,7 @@
   },
   "babel": {
     "presets": [
+      "@babel/preset-env",
       "@babel/preset-react"
     ]
   }
