--- a/react-router/package.json
+++ b/react-router/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   },
   "babel": {
     "presets": [
