--- a/redux-toolkit/package.json
+++ b/redux-toolkit/package.json
@@ -25,8 +25,10 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0"
   },
   "babel": {
