--- a/library-project/package.json
+++ b/library-project/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0"
